# Serverless-Model-deployment

./: README.md  main.py  predict.py  pyproject.toml  readme.md  starter.ipynb  test.py
deployment_lambda/: Dockerfile  customer.json  deploy.sh  invoke.py  lambda_function.py  test.py
deployment_lambda/.github/workflows/: deploy.yml
deployment_lambda/terraform/: main.tf  variables.tf
src/: Dockerfile  README.md  predict.py  predict_without_api.py  test.py  train.py
