[project]
name = "serverless-model-deployment"
version = "0.1.0"
description = "churn prediction"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.116.1",
    "numpy==1.24.2",
    "pandas==1.5.3",
    "scikit-learn==1.2.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
]
